<resources>
    <string name="app_name">AltiMeter</string>

    <!--WelcomeScreen label strings-->
    <string name="ws_height" translatable="true">Height</string>
    <string name="ws_longitude" translatable="true">Longitude</string>
    <string name="ws_latitude" translatable="true">Latitude</string>
    <string name="ws_max_height" translatable="true">Max Height</string>
    <string name="ws_min_height" translatable="true">Min Height</string>
    <string name="meters_short_text">m n.p.m.</string>
    <string name="current_longitude_label">Longitude</string>
    <string name="current_latitude_label">Latitude</string>
    <string name="current_no_value">...</string>
    <string name="max_height_text">Max Height</string>
    <string name="min_height_text">Min Height</string>
    <string name="service_not_available">Service not available</string>
    <string name="invalid_lat_long_used">Invalid latitude longitude used</string>
    <string name="no_address_found">No address found</string>
    <string name="address_found">Address found</string>
    <string name="distance_text">Distance</string>
    <string name="drawer_opened">OPENED</string>
    <string name="drawer_closed">CLOSED</string>

    <!--settings strings-->
    <string name="pref_send_report">Send crash reports</string>
    <string name="pref_send_report_summary">Helps to fix bugs</string>
    <string name="pref_sync_frequency">Location sync frequency</string>
    <string name="pref_sync_frequency_summary">Set the location sync frequency</string>
    <string name="pref_user_name">Set username</string>
    <string name="pref_user_name_summary">Set your username</string>
    <string name="pref_units">Set units</string>

    <string name="pref_user_profile">User Profile</string>
    <string name="pref_update_setting">Update Settings</string>

    <!--about strings-->
    <string name="about_first">Do you want to know all specific information about your location, anytime, anywhere? Do you want to share distance and altitude of your last mountain trip? Then that app is for you!</string>
    <string name="about_second">With AltiMeter you are able to catch any information about location and store this for later use, track changes,"\ calculate distance (horizontal, vertical and combined as well) and generate graphs with elevation level and maps of places you've been.</string>
    <string name="about_how_does_it_work">How Does It Work?</string>
    <string name="about_what_does_it_do">What Does It Do?</string>
    <string name="pref_location_update_settings">Location Settings</string>
    <string name="pref_units_summary">Set distance units</string>
    <string name="pref_language">Set language</string>
    <string name="pref_language_summary">Set preferred language</string>
    <string name="pref_style_name">Set style</string>
    <string name="pref_style_summary">Set visual style</string>
    <string name="altitude_graphs">Altitude Graphs</string>
    <string name="new_graph">New Graph</string>
    <string name="map">Map</string>
    <string name="statistics">Statistics</string>
    <string name="settings">Settings</string>
    <string name="about">About</string>
    <string name="net">net</string>
    <string name="hpa">hPa</string>
    <string name="gps">gps</string>
    <string name="about_menu_description">Navigation menu button</string>
    <string name="about_title">Title</string>
    <string name="about_actions_main">Actions button. \nDelete all \nDelete checked</string>
    <string name="about_actions_stats">Actions button. \nReset statistics</string>
    <string name="about_share_button">Share menu button.</string>
    <string name="about_address_label">Address of the last checked location</string>
    <string name="about_checkbox_main">Checkboxes. Check to delete specific sessions.</string>
    <string name="about_labels_details">Details info</string>
    <string name="about_map_content">Map with travelled path.</string>
    <string name="about_current_elevation">Elevation of the last checked location</string>
    <string name="about_rows_main">Session rows. Click to see details.</string>
    <string name="about_edit_details">Title and description edit box</string>
    <string name="about_recording_buttons">Session\'s control buttons</string>
    <string name="about_button_add_main">Create new session button.</string>
    <string name="about_button_save_details">Save title and description button</string>
    <string name="about_info_details">Information about session</string>
    <string name="about_graph">Graph presenting recorded elevation in time</string>
    <string name="about_gps_button">Gps button. Allow to use GPS to get location</string>
    <string name="about_network_button">Network button. Allow to use network to get very accurate elevation</string>
    <string name="about_pressure_button">Barometer button. Allow to use barometer sensor to evaluate altitude</string>
    <string name="about_min_height">Minimum height recorded during a session</string>
    <string name="about_distance">Distance travelled during a session</string>
    <string name="about_max_height">Maximum height recorded during a session</string>
    <string name="about_latitude">Latitude of the last checked location</string>
    <string name="about_longitude">Longitude of the last checked location</string>
    <string name="new_graph_screen">New Graph Screen</string>
    <string name="graphs">G\nR\nA\nP\nH\nS</string>
    <string name="new_button">N\nE\nW</string>
    <string name="details">D\nE\nT\nA\nI\nL</string>
    <string name="stats">S\nT\nA\nT\nS</string>
    <string name="map_button">M\nA\nP</string>
    <string name="author">A\nU\nT\nH\nO\nR</string>
    <string name="labels_stats">Global statistics</string>
    <string name="label_stats_values">Global statistics values</string>
    <string name="about_actions_share">Action share.</string>


    <!--SESSION CONSTANT STRINGS-->
    <string name="positive">OK</string>
    <string name="negative">"@android:string/cancel"</string>
    <string name="upgrade_to_pro_export">Upgrade to AltiMeterPRO to export sessions data.\nDo you want to upgrade?</string>
    <string name="upgrade_to_pro_max_saved">Upgrade to AltiMeterPro to save more than 5 sessions.\nDo you want to upgrade?</string>
    <string name="message_generate_map">Generate a map?</string>
    <string name="message_send_to">Send to?</string>
    <string name="message_save_session">Save session to database?</string>
    <string name="message_reset_session">Reset session. Are you sure?</string>
    <string name="message_delete_all">Delete all?</string>
    <string name="message_delete_checked">Delete checked?</string>
    <string name="message_reset_statistics">Reset statistics?</string>
    <string name="message_saving_please_wait">Saving session data, please wait...</string>
    <string name="toast_empty_map">Session has no recorded points. Record points in order to generate a map...</string>
    <string name="toast_session_saved">Session data saved</string>
    <string name="toast_session_paused">Paused</string>
    <string name="toast_session_recording">Recording data</string>
    <string name="toast_turn_on_source">Turn on at least one data source</string>
    <string name="toast_must_stop_session">You must stop session first</string>
    <string name="toast_checked_deleted">Checked sessions deleted</string>
    <string name="toast_all_deleted">All sessions deleted</string>
    <string name="toast_changes_saved">Changes saved</string>

    <!--menu strings-->
    <string name="menu_delete_all">Delete all</string>
    <string name="menu_delete_checked">Delete checked</string>
    <string name="menu_share">Share</string>
    <string name="menu_export_data">Export session data</string>
    <string name="menu_reset_statistics">Reset statistics</string>
</resources>