<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group
        android:id="@+id/nav_menu_group_user">

        <item
            android:id="@+id/graphs_list_navigation_menu_item"
            android:icon="@drawable/ic_altitude_black_24dp"
            android:title="@string/altitude_graphs" />

        <item
            android:id="@+id/new_graph_navigation_menu_item"
            android:icon="@drawable/ic_add_black_24dp"
            android:title="@string/new_graph"/>

        <item
            android:id="@+id/map_navigation_menu_item"
            android:icon="@drawable/ic_terrain_black_24dp"
            android:title="@string/map"/>

        <item
            android:id="@+id/statistics_navigation_menu_item"
            android:icon="@drawable/ic_statistics_black_24dp"
            android:title="@string/statistics"/>
    </group>

    <group
        android:id="@+id/nav_menu_group_utility">
        <item
            android:id="@+id/settings_navigation_menu_item"
            android:icon="@drawable/ic_settings_black_24dp"
            android:title="@string/settings"/>

        <item
            android:id="@+id/upgrade_pro_menu_item"
            android:icon="@drawable/ic_upgrade_pro_black_24dp"
            android:title="Upgrade to AltiMeterPro"/>

        <item
            android:id="@+id/about_navigation_menu_item"
            android:icon="@drawable/ic_about_black_24dp"
            android:title="@string/about"/>
    </group>
</menu>