<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorBlack"
    android:orientation="vertical">

    <!--location label, current height label, geographic direction label-->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal"
        android:layout_weight="13.5">

        <!--location label-->
        <TextView
            android:id="@+id/location_label"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"

            android:textColor="@color/colorWhite"
            android:text="@string/current_no_value"
            android:textAppearance="?android:textAppearanceLarge"
            android:textSize="@dimen/text_size_16sp"
            android:gravity="center"
            android:textAlignment="center" />

        <!--current height labels-->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:layout_weight="1.1">

            <TextView
                android:id="@+id/current_elevation_label"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"

                android:textColor="@color/colorWhite"
                android:text="@string/current_no_value"
                android:textAppearance="?android:textAppearanceLarge"
                android:textSize="@dimen/text_size_large_30sp"
                android:textAlignment="center"
                android:gravity="center"/>

            <TextView
                android:id="@+id/current_elevation_text_label"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1.25"

                android:textColor="@color/colorWhite"
                android:text="@string/meters_short_text"
                android:textAppearance="?android:textAppearanceSmall"
                android:singleLine="false"
                android:textAlignment="center"
                android:gravity="center" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:layout_weight="1">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal"
                android:layout_weight="1">

                <FrameLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1.5"/>

                <ImageButton
                    android:id="@+id/reset_button"
                    android:clickable="true"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@drawable/ic_refresh_black_24dp"
                    android:layout_weight="1"/>

                <FrameLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1.5"/>

                <ImageButton
                    android:id="@+id/pause_button"
                    android:clickable="true"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@drawable/ic_play_arrow_black_24dp"
                    android:layout_weight="1"/>

                <FrameLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1.5"/>
            </LinearLayout>

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="8dp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal"
                android:layout_weight="1">

                <FrameLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1.5"/>

                <ImageButton
                    android:id="@+id/lock_button"
                    android:clickable="true"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@drawable/ic_lock_outline_black_24dp"
                    android:layout_weight="1"/>

                <FrameLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1.5"/>

                <ImageButton
                    android:id="@+id/map_button"
                    android:clickable="true"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@drawable/ic_terrain_graph_black_24dp"
                    android:layout_weight="1"/>

                <FrameLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1.5"/>
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>

    <!--drawing board-->
    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="9">

        <!--ELEMENT FROM EXTERNAL LIBRARY TO CREATE GRAPHS IN REAL TIME-->
        <pl.grzegorziwanek.altimeter.app.newgraph.GraphViewWidget
            android:id="@+id/graph_view"
            android:layout_width="match_parent"
            android:layout_height="match_parent"/>
    </FrameLayout>

    <!--layouts with max height, time, min height, longitude icon, latitude icon, small border line between,
     longitude text latitude text, small border line between, advert-->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_weight="10.5">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:layout_weight="0.85">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:layout_weight="1">

                <TextView
                    android:id="@+id/min_height_text"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"

                    android:textColor="@color/colorWhite"
                    android:text="@string/min_height_text"
                    android:textAppearance="?android:textAppearanceMedium"
                    android:gravity="center"
                    android:textAlignment="center"/>
                <TextView
                    android:id="@+id/min_height_numbers"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"

                    android:textColor="@color/colorWhite"
                    android:text="@string/current_no_value"
                    android:textAppearance="?android:textAppearanceSmall"
                    android:gravity="center"
                    android:textAlignment="center"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:layout_weight="1">

                <TextView
                    android:id="@+id/distance"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"

                    android:textColor="@color/colorWhite"
                    android:text="@string/distance_text"
                    android:textAppearance="?android:textAppearanceMedium"
                    android:gravity="center"
                    android:textAlignment="center"/>

                <TextView
                    android:id="@+id/distance_numbers"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"

                    android:textColor="@color/colorWhite"
                    android:text="@string/current_no_value"
                    android:textAppearance="?android:textAppearanceSmall"
                    android:gravity="center"
                    android:textAlignment="center"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:layout_weight="1">

                <TextView
                    android:id="@+id/max_height_text"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"

                    android:textColor="@color/colorWhite"
                    android:text="@string/max_height_text"
                    android:textAppearance="?android:textAppearanceMedium"
                    android:gravity="center"
                    android:textAlignment="center"/>

                <TextView
                    android:id="@+id/max_height_numbers"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"

                    android:textColor="@color/colorWhite"
                    android:text="@string/current_no_value"
                    android:textAppearance="?android:textAppearanceSmall"
                    android:gravity="center"
                    android:textAlignment="center"/>
            </LinearLayout>
        </LinearLayout>

        <!--separator line-->
        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/colorPrimaryDark" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:layout_weight="0.85">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:layout_weight="1">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal"
                    android:layout_weight="1">

                    <TextView
                        android:id="@+id/current_latitude_label"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_weight="1"

                        android:textColor="@color/colorWhite"
                        android:text="@string/current_latitude_label"
                        android:textAppearance="?android:textAppearanceLarge"
                        android:gravity="center"
                        android:textAlignment="center"/>

                    <TextView
                        android:id="@+id/current_longitude_label"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_weight="1"

                        android:textColor="@color/colorWhite"
                        android:text="@string/current_longitude_label"
                        android:textAppearance="?android:textAppearanceLarge"
                        android:gravity="center"
                        android:textAlignment="center"/>
                </LinearLayout>

                <!--separator line-->
                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="@color/colorPrimaryDark" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal"
                    android:layout_weight="1">

                    <TextView
                        android:id="@+id/current_latitude_value"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_weight="1"

                        android:textColor="@color/colorWhite"
                        android:text="@string/current_no_value"
                        android:textAppearance="?android:textAppearanceMedium"
                        android:gravity="center"
                        android:textAlignment="center"/>

                    <TextView
                        android:id="@+id/current_longitude_value"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_weight="1"

                        android:textColor="@color/colorWhite"
                        android:text="@string/current_no_value"
                        android:textAppearance="?android:textAppearanceMedium"
                        android:gravity="center"
                        android:textAlignment="center"/>
                </LinearLayout>
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>
</LinearLayout>
